[package]
name = "bevy_wgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_egui = { version = "0.27.0" }
bevy = "0.13.2"
egui = "*"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
